# cvcreator

./: .gitignore  CV_Guttorm.yaml  Dockerfile  Pipfile  README.md  README.rst  build.sh  config.yaml  conftest.py  cvcreate  cvcreate2.py  cvcreate3.py  cvtext.odt  dockerfile  example.yaml  fagdag.rst  guttorm_CV.yaml  pyproject.toml  run.sh  setup.py  txt2yaml.py
.circleci/: config.yml
.github/workflows/: main.yml  release.yml  test-and-build.yml
cv/: README.md
cv/aa/: AnisAyati.yaml
cv/af/: cv-alexander.yaml  punktliste-2018-01-16-HouseOfConsulting-forsvaret.txt  punktliste-2018-01-30-HouseOfConsulting-amesto.txt
cv/ak/: ak.yaml
cv/am/: alocias.yaml
cv/ao/: CV.tex  CV_mal.pytex  cv_content.tex  cv_content.txt  cv_content.yaml  cv_mal.pytex.backup  odegard.tex  portfolio.tex  project_order.txt  testing  xal_cv_Ødegård.docx
cv/aoc/: cv_ada.yaml
cv/dd/: CV_Diako.yaml
cv/ea/: cv.yaml
cv/el/: cv_el.yaml
cv/fm/: cv_fredrik.yaml
cv/gk/: CV_Guttorm.yaml  TID_Guttorm_kompetanse.odt  cv_guttorm.yaml
cv/jf/: feinberg.yaml
cv/js/: js-cv.yaml
cv/jw/: johannes.yaml  johannes_right-people.yaml
cv/kam/: KentAndreMardal.yaml
cv/ma/: alnes-unused.yaml  alnes.yaml
cv/mb/: mats_cv.yaml
cv/mk/: max.yaml
cv/os/: CV_mal.pytex  GeneratedCV.tex  all_my_maps.txt  cv_content.txt  cv_content.yaml  cv_content.yaml_  cv_skavhaug.tex  cv_skavhaug.yaml  cvcompile.py  foo.tex  installfonts.txt  project_order.txt
cv/pz/: PZ.yaml  PZ.yaml_backup.yaml
cv/re/: Emaus.yaml
cv/rh/: rh.yaml
cv/rs/: robert.yaml
cv/sfu/: cv_sebas.yaml  cv_sebas_verbose.yaml
cv/sg/: Gjertsen.yaml
cv/sl/: stian.yaml
cv/ss/: slang.yaml
cv/st/: tennøe.yaml
cv/tb/: trygve.yaml
cv/tpg/: cv_xal_golding.yaml
cv/ve/: cv_vinzenz.yaml
cvcreator/: .cvcreate.py.swp  __init__.py  __main__.py  compile.py  content.py  cvaggregate.py  cvcreate.py  merge.py  parser.py  schema.py  tech_skills.py  txt2yaml.py  workspace.py  yaml2toml.py  yaml2yaml.py
cvcreator/aggregate/: content.py  schema.py
cvcreator/data/: tech_skills.toml
cvcreator/templates/: aggregate.csv  aggregate.tex  aggregated.yaml  banking.yaml  casual.yaml  classic.yaml  default.tex  default.yaml  default_de.yaml  example  example.toml  example.yaml  margin.yaml  (+4 more)
examples/: example.tex  example.toml  example.yaml  test_agg.yaml
fagdag/: 2019-schedule.txt
formiddag/: 2019-schedule.txt  schedule.txt
formiddag/2019-09-03/: README.rst  deltakere.txt  presentation.rst  pyproject.toml
formiddag/2019-09-03/presentation/: index.html
formiddag/2021-02-03/: README.rst  main.css  main.rst  pyproject.toml
formiddag/2021-02-16/: README.rst  main.rst  pyproject.toml
hr/: personalbok.md  reisebyraa.txt
pub_keys/: config.yml  readme.md
test/: aggregate_example.toml  test_merge.py  test_tech_skills.py
(+83 files in other folders)
