[tool.poetry]
name = "cvcreator"
version = "1.0-beta2"
description = "An automated tool for creating CVs on the fly."
authors = ["Jonathan Feinberg <jonathf@gmail.com>"]
license = "mit"
include = ["cvcreator/templates/*"]

[tool.poetry.dependencies]
python = ">=3.7"
toml = "^0.10.2"
pydantic = "^1.8.1"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[tool.poetry.scripts]
cvcreate = "cvcreator.__main__:main"
yaml2toml = "cvcreator.yaml2toml:main"
txt2yaml = "cvcreator.txt2yaml:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
