[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvcreator"
version = "1.1.17"
description = "An automated tool for creating CVs on the fly."
authors = [
    {name = "Jonathan Feinberg <jonathf@gmail.com>"},
]
license = "mit"
dependencies = [
    "toml>=0.10.2",
    "PyYAML==5.3.1",
    "pydantic>=1.8.1",
    "Jinja2>=2.11.3",
    "click>=8.0.1",
    "click-help-colors>=0.9",
    "markupsafe==2.0.1",
    "pycountry>=20.7.3",
]

[project.optional-dependencies]
test = [
    "pytest>=6.2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["cvcreator"]
sources = ["cvcreator/templates/*", "cvcreator/data/*"]

[project.scripts]
cv = "cvcreator.parser:cv"
cvcreate = "cvcreator.parser:create"
